# imo

./: .gitignore  README.md  pyproject.toml  requirements.txt
imo/: attribution.py  model.py  utils.py
notebooks/: attributions.ipynb  paper.ipynb
outlier_attribution/: flow.py  model.py  utils.py
scripts/: make_attribution_figs.py
test/: test_ae.py  test_catalog.py  test_flow.py  test_model.py
weights/: galaxy-flow-state_dict.pt
